FIX - alert width on mobiles

--- a/other/minify/index.css
+++ b/other/minify/index.css
@@ -356,7 +356,9 @@ button.cat {
     }
 
     .alert {
-        width : 100%;
+        width      : calc(100% - 20px);
+        max-width  : calc(100% - 20px);
+        box-sizing : border-box;
     }
 }
 
